Fixed Mobile Nav spacing for Logged in User display

--- a/matrix-server/app/static/main.css
+++ b/matrix-server/app/static/main.css
@@ -1683,11 +1683,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 2.5rem;
   }
 
-  .md\:px-2{
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
   .md\:pb-0{
     padding-bottom: 0px;
   }
